# agentic_resources

./: README.md  agent.py  client.py  main.py  pyproject.toml  web_search.py
resources/: __init__.py  markdown_utils.py  mcp_client.py  selectors.py
shared_files/: project_notes.txt
tools/: tool.py  validation_tool.py
